<resources>
    <string name="app_name">Handy HoYo</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="honkai_impact_3rd">Honkai Impact 3rd</string>
    <string name="honkai_star_rail">Honkai: Star Rail</string>
    <string name="genshin_impact">Genshin Impact</string>
    <string name="redemption_code">Redeem Code</string>
    <string name="daily_login">Daily Login</string>
    <string name="paimon_derp">Paimon Derp</string>
    <string name="user_id">User ID</string>
    <string name="copy">Copy</string>
    <string name="type_uid">Type UID</string>
    <string name="search_or_type_url">Search or Type URL</string>
    <string name="check_in">Check-In</string>
    <string name="battle_chronicle">Battle Chronicle</string>
    <string name="interactive_map">Interactive Map</string>
    <string name="genshin_impact_wiki">Genshin Impact Wiki</string>
    <string name="enhancement_calculator">Enhancement Calculator</string>
    <string name="kqm_guide_and_tc">KQM: Guide and TC</string>
    <string name="enka_network">Enka.Network</string>
    <string name="honkai_impact_3rd_wiki">Honkai Impact 3rd Wiki</string>
    <string name="check_in2">Check In</string>
    <string name="battle_records">Battle Records</string>
    <string name="honkai_star_rail_map">Honkai: Star Rail Map</string>
    <string name="honkai_star_rail_wiki">Honkai: Star Rail Wiki</string>
    <string name="kqm_hsr_guide_and_tc">KQM - HSR: Guide and TC</string>
    <string name="enka_network_for_hsr">Enka.Network for HSR</string>
    <string name="hoyolab">HoYoLAB</string>
    <string name="mimo_dash">Mimo Dash</string>
    <string name="nhslogan1">Abandon all hope, ye who enter here</string>
    <string name="nhslogan2">ここから入らんとする者は一切の希望を放棄せよ</string>
    <string name="entercode">Enter your code</string>
    <string name="proceed">Proceed</string>
    <string name="tears_of_themis">Tears of Themis</string>
    <string name="check_in3">Check in</string>
    <string name="tears_of_themis_wiki">Tears of Themis Wiki</string>
    <string name="return_home">Return</string>
    <string name="zenless_zone_zero">Zenless Zone Zero</string>
    <string name="sign_up">Sign-Up</string>
    <string name="project_amber">Project Amber</string>
    <string name="project_yatta">Project Yatta</string>
</resources>