<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center"
    tools:context=".RedemptionCode"
    android:id="@+id/redeemLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="333dp"
        android:src="@drawable/derpaimon"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/paimon_derp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/daily_login"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/genshin3"
            android:text="@string/daily_login"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <Button
            android:id="@+id/redemption_code"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:backgroundTint="@color/genshin2"
            android:text="@string/redemption_code"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <Button
            android:id="@+id/uid"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/genshin3"
            android:text="@string/user_id"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/gi"
            app:cardCornerRadius="8dp"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gi48"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/hsr"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/gi"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hsr48"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/hi3"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/hsr"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hi348"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/enter_code_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>