<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center"
    tools:context=".UID">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="333dp"
        android:src="@drawable/derpaimon"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/paimon_derp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/gi_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/daily_login"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/genshin3"
            android:text="@string/daily_login"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <Button
            android:id="@+id/redemption_code"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:backgroundTint="@color/genshin3"
            android:text="@string/redemption_code"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <Button
            android:id="@+id/uid"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/genshin2"
            android:text="@string/user_id"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/gi_fields">
        
        <androidx.cardview.widget.CardView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:id="@+id/gi"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gi48"/>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/uid_gi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_toStartOf="@id/copyclear_uid_gi"
            android:layout_toEndOf="@id/gi"
            android:background="@null"
            android:hint="@string/type_uid"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:id="@+id/copyclear_uid_gi">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_content_copy_24"
                android:layout_marginRight="5dp"
                android:id="@+id/copy_uid_gi"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cancel_24"
                android:id="@+id/clear_uid_gi"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gi_fields"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/hsr_fields">

        <androidx.cardview.widget.CardView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:id="@+id/hsr"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hsr48"/>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/uid_hsr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_toStartOf="@id/copyclear_uid_hsr"
            android:layout_toEndOf="@id/hsr"
            android:background="@null"
            android:hint="@string/type_uid"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:id="@+id/copyclear_uid_hsr">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_content_copy_24"
                android:layout_marginRight="5dp"
                android:id="@+id/copy_uid_hsr"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cancel_24"
                android:id="@+id/clear_uid_hsr"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsr_fields"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/hi3_fields">

        <androidx.cardview.widget.CardView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:id="@+id/hi3"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hi348"/>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/uid_hi3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_toStartOf="@id/copyclear_uid_hi3"
            android:layout_toEndOf="@id/hi3"
            android:background="@null"
            android:hint="@string/type_uid"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:id="@+id/copyclear_uid_hi3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_content_copy_24"
                android:layout_marginRight="5dp"
                android:id="@+id/copy_uid_hi3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_cancel_24"
                android:id="@+id/clear_uid_hi3"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>